--- a/homepage.css
+++ b/homepage.css
@@ -1,10 +1,10 @@
 .header{
     text-align:center;
-    background-color:yellow;
+    background-color:green;
     height:200px;
   }
   .desc{
-    border-bottom:5px black solid;
+    border-bottom:5px rgb(221, 42, 42) solid;
     
   }
   marquee{
@@ -13,7 +13,7 @@
   }
   
   .dept{
-  border-bottom:5px black solid;
+  border-bottom:5px rgb(216, 54, 54) solid;
   width:160px;
   color:#6495ED;
   }
@@ -26,7 +26,7 @@
   }
   
   a:hover{
-  background-color:black;
+  background-color:rgb(206, 57, 57);
   width:100px;
   }
   .portal{
